# finder-sight

./: .gitignore  Makefile  Package.swift  README.md  finder_sight.spec  icon.icns  main.py  pyproject.toml  requirements.txt  run.py  start.sh  test_crop.py
.github/workflows/: build.yml  ci.yml
Sources/FinderSight/: AppModel.swift  ContentView.swift  FinderSightApp.swift  ImageIndex.swift  Models.swift  PerceptualHash.swift  SettingsView.swift  ThumbnailLoader.swift
docs/: _config.yml  guide.md  index.md
scripts/: build_app.sh  create_dmg.sh  test_core.sh
src/finder_sight/: __init__.py  _version.py  constants.py
src/finder_sight/core/: duplicate_finder.py  indexer.py  searcher.py
src/finder_sight/ui/: index_manager_dialog.py  main_window.py  search_area.py  settings_dialog.py  sidebar.py  style.qss  widgets.py
src/finder_sight/utils/: logger.py  paths.py  resource_helper.py  updater.py  updater_thread.py
tests/: CoreSmokeTests.swift  test_app.py  test_duplicate_finder.py  test_extension_support.py  test_search_fallback.py  test_updater.py  test_v002_features.py  test_v003_features.py  test_v004_features.py  verify_search_logic.py
tests/FinderSightTests/: FinderSightTests.swift
tools/: capture_screenshots.py  sync_version.py
